--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: "europa", sans-serif;
+}
+
+
 .text-centered {
     text-align: center;
 }
@@ -8,6 +13,6 @@
 
 
 .wrapper {
-    width: 300px;
+    width: 500px;
     margin: auto;
   }
