--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@ body {
     text-align: center;
 }
 
-.large-text{
-    font-size: 50px;
+.large-text {
+    font-size: 2.8em;
+    margin-top: 200px;
 }
-
 
 .wrapper {
     width: 500px;
     margin: auto;
-  }
+}
+
+.wrapper p {
+    font-size: 1.2em;
+}
