--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@ header {
     height: 710px;
 }
 
+footer {
+    padding: 5px;
+    background-color: rgb(50, 119, 116);
+    color: white;
+}
+.saint-louis {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .text-centered {
     text-align: center;
 }
@@ -34,4 +46,28 @@ header {
 
 .list li {
     padding-top: 10px;
+}
+
+section {
+    padding: 20px;
+}
+
+a:link {
+    color:blue;
+}
+
+a:visited {
+    color: purple;
+}
+
+a:hover {
+    color:lightblue;
+}
+
+a:active {
+    font-size: 0.9em;
+}
+
+a:focus {
+    color:blue;
 }
